--- a/src/app/features/premium/dashboard/tenants/tenants.component.html
+++ b/src/app/features/premium/dashboard/tenants/tenants.component.html
@@ -1,11 +1,46 @@
 
 <div class="row">
-    <button class="btn col-lg-4 col-md-8 col-sm-8 col-xs-12" routerLink="/landlord-dashboard">
-        <clr-icon shape="home"></clr-icon>
-        Dashboard Home
-    </button>
-    <button class="btn col-lg-4 col-md-8 col-sm-8 col-xs-12">
-        <clr-icon shape="cog"></clr-icon>
-        Settings
-    </button>
-  </div>
+        <button class="btn col-lg-4 col-md-8 col-sm-8 col-xs-12" routerLink="/landlord-dashboard">
+            <clr-icon shape="home"></clr-icon>
+            Dashboard Home
+        </button>
+      </div>
+      
+      <div class="row">
+      
+      <div class="col-xs-12">
+      
+      <form>
+              <section class="form-block">
+                  <label>Create Tenant</label>
+                  <div class="form-group row">
+                      <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
+                          <label for="gForm_1">Tenant</label>
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                          <input class="form-control" type="text" id="gForm_1" placeholder="First Name" size="45">
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                            <input class="form-control" type="text" id="gForm_2" placeholder="Last Name" size="45">
+                      </div>
+                  </div>
+                  <div class="form-group row">
+                      <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
+                          <label for="gForm_3">Property</label>
+                      </div>
+                      <div class="col-lg-4 col-md-8 col-sm-12 col-xs-12">
+                          <div class="select form-control">
+                              <select id="gForm_3">
+                                  <option [value]="property" *ngFor="let property of properties">{{property.title}}</option>
+                              </select>
+                          </div>
+                      </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Add Tenant</button>
+              </section>
+          </form>
+          
+      </div>
+      </div>
+          
+      
