--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,26 +1,9 @@
-<!-- <mat-card class="margin-top">
-  <mat-card-title fxLayoutAlign="center">
-    Welcome to Xenos
-  </mat-card-title>
-  <mat-card-content fxLayoutAlign="center">
-    <mat-divider></mat-divider>
-  </mat-card-content>
-  <div fxLayout="row" fxLayoutAlign="start center">
-    <div fxFlex.xs="5%" fxFlex.sm="15%" fxFlex.md="20%"></div>
-    <div fxFlex.xs="90%" fxFlex.sm="70%" fxFlex.md="60%">
-      <br>
-      Some features of Xenos are now live.  Get ready for a taste of the next level of rental property and real estate listings
-    </div>
-    <div fxFlex></div>
-  </div>
-</mat-card> -->
-
 <div class="row">
   <div class="col-lg-12">
     <div class="card">
       <div class="card-header row flex-items-xs-middle">
         <div class="col-lg-6">
-            <img src="../../../assets/banner.png" />
+            <img src="../../../assets/banner.png" style="width: 100%" />
         </div>
         <div class="col-lg-6">
           <h3> Some features of Xenos are now live.  Get ready for a taste of the next level of rental property and real estate listings </h3>
