--- a/src/app/features/premium/dashboard/expenses/expenses.component.html
+++ b/src/app/features/premium/dashboard/expenses/expenses.component.html
@@ -4,13 +4,17 @@
       <clr-icon shape="home"></clr-icon>
       Dashboard Home
   </button>
+  <button class="btn col-lg-4 col-md-8 col-sm-8 col-xs-12" (click)="addExpense = !addExpense">
+    <clr-icon shape="plus"></clr-icon>
+    Add Expense
+</button>
 </div>
 
 <div class="row">
 
 <div class="col-xs-12">
 
-<form>
+<form [formGroup]="expensesForm" *ngIf="addExpense">
         <section class="form-block">
             <label>Create Expense</label>
             <div class="form-group row">
@@ -18,10 +22,10 @@
                     <label for="gForm_1">Expense</label>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <input class="form-control" type="text" id="gForm_1" placeholder="Enter value here" size="45">
+                    <input class="form-control" type="text" id="gForm_1" placeholder="Expense Name" formControlName="name">
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <input class="form-control" type="date" id="gForm_2" clrDate>
+                    <input formControlName="date" class="form-control" type="date" id="gForm_2" clrDate>
                 </div>
             </div>
             <div class="form-group row">
@@ -30,8 +34,8 @@
                 </div>
                 <div class="col-lg-4 col-md-8 col-sm-12 col-xs-12">
                     <div class="select form-control">
-                        <select id="gForm_3">
-                            <option [value]="property" *ngFor="let property of properties">{{property.title}}</option>
+                        <select id="gForm_3" formControlName="property">
+                            <option [ngValue]="property" *ngFor="let property of properties">{{property.title}}</option>
                         </select>
                     </div>
                 </div>
@@ -41,13 +45,25 @@
                         <label for="gForm_4">Cost $</label>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                        <input class="form-control" type="text" id="gForm_4" placeholder="Cost">
+                        <input formControlName="cost" class="form-control" type="text" id="gForm_4" placeholder="Cost">
                     </div>
                 </div>
-            <button type="submit" class="btn btn-primary">Add Expense</button>
+            <button type="submit" class="btn btn-primary" (click)="saveExpense()">Add Expense</button>
         </section>
     </form>
     
+    <div class="col-lg-6 col-xs-12">
+        <div class="card">
+            <div class="card-header">
+                Expenses
+            </div>
+            <div class="card-block">
+                <div class="card-text">
+                    <canvas id="expensesLineChart"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
     
