--- a/src/app/features/premium/dashboard/properties/properties.component.html
+++ b/src/app/features/premium/dashboard/properties/properties.component.html
@@ -4,6 +4,10 @@
         <clr-icon shape="home"></clr-icon>
         Dashboard Home
     </button>
+    <button class="btn col-lg-4 col-md-8 col-sm-8 col-xs-12" routerLink="/propertyEdit">
+        <clr-icon shape="home"></clr-icon>
+        Add New Listing
+    </button>
 </div>
 
 
