--- a/src/app/features/reset/forgot-password/forgot-password.component.html
+++ b/src/app/features/reset/forgot-password/forgot-password.component.html
@@ -2,7 +2,7 @@
     <div class="col-lg-6 offset-lg-3 col-md-8 col-sm-12 col-xs-12">
         <div class="card">
             <div class="card-header">
-                Forgot Password
+                Update Password
             </div>
             <div class="card-block">
                 <div class="card-title">
