--- a/src/app/features/premium/dashboard/properties/properties.component.html
+++ b/src/app/features/premium/dashboard/properties/properties.component.html
@@ -15,6 +15,8 @@
     <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" *ngFor="let property of properties">
         <app-property (click)="openDetails(property)" [property]="property"></app-property>
     </div>
+    <!-- NgIf property isn't premium, show button to bring up page/modal/dialog to purchase promoted listing.
+         Else: Disabled button with label indicating Property is promoted -->
 </div>
 
 
@@ -24,5 +26,3 @@
         <app-propertydetails *ngIf="selectedProperty" [property]="selectedProperty" [editable]="true" (onSubmit)="onUpdate($event)"></app-propertydetails>
     </div>
 </clr-modal>
-
-
