--- a/src/app/features/userlist/userlist.component.html
+++ b/src/app/features/userlist/userlist.component.html
@@ -1,3 +1,22 @@
-<p>
-  userlist works!
-</p>
+<div style="text-align: center">
+  <app-search (searchBy)="onSearchByChange($event)" (search)="onSearchChange($event)"></app-search>
+</div>
+
+<div class="row">
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" *ngFor="let user of users | prop : searchBy : search" >
+        <app-user  (click)="openDetails(user)" [user]="user" style="cursor: pointer"></app-user>
+    </div>
+</div>
+
+
+
+<clr-modal [(clrModalOpen)]="openModal" [clrModalSize]="'lg'">
+    <h3 class="modal-title">{{selectedUser?.title}}</h3>
+    <div class="modal-body">
+        <app-user *ngIf="selectedUser" [user]="selectedUser"></app-user>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline" (click)="openModal = false">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="openModal = false">Ok</button>
+    </div>
+</clr-modal>
