--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -9,6 +9,7 @@
       <a routerLink="home" class="nav-link"><span class="nav-text">Home</span></a>
       <a routerLink="propertyList" class="nav-link"><span class="nav-text">Listings</span></a>
       <a *ngIf="user && user.isPremium" routerLink="landlord-dashboard" class="nav-link"><span class="nav-text">Landlord Panel</span></a>
+      <a *ngIf="user && user.isPremium" routerLink="userList" class="nav-link"><span class="nav-text">Users</span></a>
   </div>
   <div class="header-actions">
 
@@ -23,14 +24,14 @@
       </button>
 
       <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
-        <a *ngIf="!user" routerLink="login" clrDropdownItem>Login</a>        
-        <a *ngIf="!user" routerLink="register" clrDropdownItem>Register</a>        
+        <a *ngIf="!user" routerLink="login" clrDropdownItem>Login</a>
+        <a *ngIf="!user" routerLink="register" clrDropdownItem>Register</a>
         <a *ngIf="user" routerLink="propertyEdit" clrDropdownItem>Add New Listing</a>
         <a *ngIf="user && !user.isPremium" routerLink="premium-signup" clrDropdownItem>Sign Up For Premium</a>
         <a routerLink="forgot-password" clrDropdownItem>Update password</a>
-        <a *ngIf="user" clrDropdownItem (click)="logout()">Log out</a> 
+        <a *ngIf="user" clrDropdownItem (click)="logout()">Log out</a>
       </clr-dropdown-menu>
-      
+
     </clr-dropdown>
   </div>
 </clr-header>
